2011-03-09  Xavier Queralt  <xqueralt@flumotion.com>

	* flumotion/component/producers/fms/fms.py:
	With the new GStreamer we don't need to set the caps of the appsrc.
	Actually, if we do, the next component receives the streamheader twice
	and can commit suicide if he doesn't like receiving two headers
	(e.g. decoder). See #15261

2011-03-09  Xavier Queralt  <xqueralt@flumotion.com>

	* flumotion/component/producers/fms/fms.py:
	Remove startcodes from the incoming H.264 packets.
	When pushing from a Digital Rapids encoder we get:
	  - access unit delimiter in each packet
	  - SPS and PPS embeded each 2 seconds
	This breaks the decoder so we don't want it!
	See https://code.area51.fluendo.com/private/trac/ticket/14915#comment:7

2010-12-02  Xavier Queralt  <xqueralt@flumotion.com>

	reviewed by: jribas

	* flumotion/component/producers/fms/fms.py:
	Instead of monitorizing the buffers we receive via a callLater we
	can use the pad monitors we already have in the components.

2010-11-15  Xavier Queralt  <xqueralt@flumotion.com>

	reviewed by: jribas

	* flumotion/component/producers/fms/fms.py:
	Implement publishStream method on our application. This way we can
	check if a given stream has already been published and/or if the client
	is still alive. If the encoder died or lost the connection without
	unpublishing/disconnecting, here we can detect it and proceed with the
	disconnect/unpublish before letting another encoder to publish.

2010-11-15  Xavier Queralt  <xqueralt@flumotion.com>

	reviewed by: jribas

	* flumotion/component/producers/fms/fms.py:
	Do not remove subscribers. It is done already in a deeper layer.

2010-11-15  Xavier Queralt  <xqueralt@flumotion.com>

	reviewed by: jribas

	* flumotion/component/producers/fms/fms.py:
	Modifications to be compatible with new rtmpy

2010-11-15  Xavier Queralt  <xqueralt@flumotion.com>

	reviewed by: jribas

	* flumotion/component/producers/fms/live.py:
	Modifications to be compatible with new rtmpy
